# Vesper

./: .gitignore  README.md  main.py  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ci.yml  pages.yml
alpha_model/: __init__.py  cross_sectional_model.py  target_formulation.py
data_pipeline/: __init__.py  graph_builder.py  sec_scraper.py
docs/: cap_binding_diagnostics.html  evaluation.html
features/: __init__.py  shock_propagation.py
notebooks/: cap_binding_diagnostics.ipynb  evaluation.ipynb
portfolio/: __init__.py
scripts/: __init__.py  synthetic_generator.py
tests/: conftest.py  test_alpha.py  test_features.py  test_integration.py  test_lookahead.py  test_main_step3_defensive.py  test_notebook_repo_root.py  test_parquet.py  test_portfolio.py  test_sec_scraper_iter_filings.py
vesper/: main.py
vesper/alpha_model/: __init__.py  cross_sectional_model.py
vesper/data_pipeline/: __init__.py  mda_parser.py  sec_scraper.py
vesper/features/: __init__.py  nlp_decay.py  shock_propagation.py
vesper/portfolio/: __init__.py  convex_optimizer.py  factor_neutralization.py
vesper/scripts/: __init__.py  synthetic_generator.py
