[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vesper"
version = "0.1.0"
description = "Vesper — Alternative Data Information Arbitrage Signal Engine"
authors = [{ name = "Vesper Engineering" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["."]
include = ["vesper*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B", "UP", "PD"]

# PD901 (pandas-vet) was the canonical ban on ``DataFrame.iterrows()``.
# It was *upstream-removed in ruff 0.5.0* (May 2024) as "highly opinionated
# and overly strict in most cases". Two paths to keep this rule active:
#
#   1. Pin ``ruff>=0.4,<0.5`` in your dev tooling — PD901 is then enforced.
#   2. Use a pre-commit regex hook on ``\b\.iterrows\(`` if you want to
#      run a modern ruff for everything else.
#
# Current production ruff (0.5.0+) silently no-ops this rule. The codebase
# itself still uses the canonical vectorisation patterns
# (``itertuples()`` for row-level side-effects, ``merge_asof(by=...)``
# for partitioned asof joins, ``zip`` over numpy arrays for row walks),
# so the underlying invariant is intact even when PD901 isn't enforced.

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
addopts = "-ra --strict-markers"
