[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vesper"
version = "0.1.0"
description = "Vesper — Alternative Data Information Arbitrage Signal Engine"
authors = [{ name = "Vesper Engineering" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["."]
include = ["vesper*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B", "UP"]

# ``DataFrame.iterrows()`` is intentionally banned in this codebase for
# performance reasons - prefer ``itertuples()`` for row-level side effects,
# ``pd.merge_asof(by=...)`` for partitioned asof joins, or ``zip`` over
# numpy arrays for row walks. ``pandas-vet``'s ``.iterrows()`` rule
# (``PD901``) was upstream-removed in ruff 0.5.0; other ``PD``-prefixed
# pandas-vet checks are still available if ever wanted.

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
addopts = "-ra --strict-markers"
